[Feat] still init directoy & try some node class syntax
